# ipredEMC

./: .gitignore  README.md  TMDs_example.fasta  predicted_affinity_example.csv  prediction.py  pyproject.toml  regr.pkl  significant_features.csv
scipts/: extract_fasta.ipynb  predict_EMC.ipynb
