[project]
name = "ipredemc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "biopython>=1.85",
    "jupyter>=1.1.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.1",
    "tqdm>=4.67.1",
]
